Preserve thinking and content in streaming responses